fix: minor adjustments to the filter of problems in home

--- a/app.json
+++ b/app.json
@@ -21,13 +21,19 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.interbrok.urbaniza"
     },
     "web": {
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "dc3a0521-d46d-44ee-b6a9-768e3f3c42c0"
+      }
+    }
   }
 }
