--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-maps": "1.10.0",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "expo-dev-client": "~3.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
