--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
     "expo": "~50.0.17",
     "expo-font": "~11.10.3",
     "expo-location": "~16.5.5",
@@ -18,6 +20,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
     "react-native-maps": "1.10.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
