--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "expo": "~50.0.17",
+    "expo-dev-client": "~3.3.11",
     "expo-font": "~11.10.3",
     "expo-location": "~16.5.5",
     "expo-status-bar": "~1.11.1",
