--- a/package.json
+++ b/package.json
@@ -13,17 +13,17 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
-    "expo": "~50.0.17",
-    "expo-dev-client": "~3.3.11",
-    "expo-font": "~11.10.3",
-    "expo-location": "~16.5.5",
-    "expo-status-bar": "~1.11.1",
+    "expo": "~51.0.6",
+    "expo-dev-client": "~4.0.13",
+    "expo-font": "~12.0.5",
+    "expo-location": "~17.0.1",
+    "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-maps": "1.10.0",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
+    "react-native": "0.74.1",
+    "react-native-maps": "1.14.0",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
@@ -31,7 +31,7 @@
     "@types/react": "~18.2.45",
     "@types/styled-components": "^5.1.34",
     "babel-plugin-module-resolver": "^5.0.2",
-    "typescript": "^5.1.3"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
