--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "styled-components": "^6.1.9"
+    "styled-components": "^6.1.9",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
