--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@expo-google-fonts/inter": "^0.2.3",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
     "expo": "~51.0.6",
     "expo-dev-client": "~4.0.13",
     "expo-font": "~12.0.5",
@@ -24,8 +26,7 @@
     "react-native-maps": "1.14.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "styled-components": "^6.1.9",
-    "@react-native-async-storage/async-storage": "1.23.1"
+    "styled-components": "^6.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
